Fix demo notes whitespace.

--- a/resources/public/hsbox-dark.css
+++ b/resources/public/hsbox-dark.css
@@ -203,7 +203,6 @@ tr th{
                                     color: #fff;
                                 }
 div.demoDiv {
-    text-align: left;
     width: 884px;
     display: inline-block;
 }
