--- a/resources/public/hsbox.css
+++ b/resources/public/hsbox.css
@@ -87,7 +87,6 @@ h1 {
 }
 
 div.demoDiv {
-    text-align: left;
     width: 884px;
     display: inline-block;
 }
